// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders correctly 1`] = `
<div
  className="linear-scale-container"
>
  <span
    className="scale-label lower"
  >
    lowest
  </span>
  <div
    className="row"
  >
    <label
      className="select-label linear-scale"
    >
      <input
        className="form-check-input "
        name="testName"
        onChange={[MockFunction]}
        type="radio"
        value="1"
      />
      <span>
        1
      </span>
    </label>
    <label
      className="select-label linear-scale"
    >
      <input
        className="form-check-input "
        name="testName"
        onChange={[MockFunction]}
        type="radio"
        value="2"
      />
      <span>
        2
      </span>
    </label>
    <label
      className="select-label linear-scale"
    >
      <input
        className="form-check-input "
        name="testName"
        onChange={[MockFunction]}
        type="radio"
        value="3"
      />
      <span>
        3
      </span>
    </label>
    <label
      className="select-label linear-scale"
    >
      <input
        className="form-check-input "
        name="testName"
        onChange={[MockFunction]}
        type="radio"
        value="4"
      />
      <span>
        4
      </span>
    </label>
    <label
      className="select-label linear-scale"
    >
      <input
        className="form-check-input "
        name="testName"
        onChange={[MockFunction]}
        type="radio"
        value="5"
      />
      <span>
        5
      </span>
    </label>
  </div>
  <span
    className="scale-label upper"
  >
    highest
  </span>
</div>
`;

exports[`SelectItem Component renders correctly 1`] = `
<label
  className="select-label multi"
>
  <input
    className="form-check-input "
    name="testName"
    onChange={[MockFunction]}
    type="checkbox"
    value="lowest"
  />
  <span>
    lowest
  </span>
</label>
`;
